refactor: View와 도메인 사이의 역할 재할당